Bug 506294 - Horizontal line visible on Mozilla.org button on RTL pages; r=clouserw
git-svn-id: http://svn.mozilla.org/addons/trunk@30439 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/site/app/webroot/css/amo2009/main.css
+++ b/site/app/webroot/css/amo2009/main.css
@@ -3624,7 +3624,7 @@ background-position:left -303px;
 .html-rtl #brand a:focus,
 .html-rtl #brand a:active {
     background-position: top right;
-    text-indent: -5000px;
+    text-indent: 5000px;
 }
 
 /* @end */
